--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <h1><a href="">Django Girls Blog</a></h1>
+        <h1><a href="">Django Girls Blog 김지환아 여기 내 사이트야</a></h1>
     </div>
 
     <div>
