--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,7 +1,3 @@
-h1 a {
-    color: #FCA205;
-}
-
 @font-face {
     font-family: 'HANAMDAUM';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/HANAMDAUM.woff2') format('woff2');
@@ -10,7 +6,7 @@ h1 a {
 }
 
 .page-header {
-    background-color: #ff9400;
+    border-bottom: 1px solid #e8e8e8;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -19,7 +15,6 @@ h1 a {
 .page-header h1 a,
 .page-header h1 a:visited,
 .page-header h1 a:active {
-    color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -59,6 +54,7 @@ h4 {
 
 .post {
     margin-bottom: 70px;
+    border-bottom: 1px solid #e8e8e8;
 }
 
 .post h1 a,
