--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,40 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'blog/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <title>MyDjango Blog Project!</title>
-</head>
-
-<body>
-    <div class="page-header">
-        <h1><a href="">김지환아 여기 내 사이트야</a></h1>
-    </div>
-
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-                {% for post in posts %}
-                <div class="post">
-                    <div class="date">
-                        <p>published: {{ post.published_date }}</p>
-                    </div>
-                    <h1><a href="">{{ post.title }}</a></h1>
-                    <p>{{ post.text|linebreaksbr }}</p>
-                </div>
-                {% endfor %}
-            </div>
+{% block content %}
+    {% for post in posts %}
+    <div class="post">
+        <div class="date">
+           <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1> 게시일 : {{ post.published_date }}
         </div>
+        
+        {% comment %} <p>{{ post.text|linebreaksbr }}</p> {% endcomment %}
     </div>
-
-
-</body>
-
-</html>
+    {% endfor %}
+{% endblock %}
