--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,16 +6,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MyDjango Blog Project!</title>
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <title>MyDjango Blog Project!</title>
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}" type="text/css">
 </head>
-
 <body>
     <div class="page-header">
-        <h1><a href="">두리의 블로그</a></h1>
+    {% if user.is_authenticated %}
+        <a href="{% url 'post_create' %}" class="top-menu"><span class="glyphicon glyphicon-plus btn btn-link"></span></a>
+    {% endif %}
+        <h1><a href="/">두리의 블로그</a></h1>
     </div>
     <div class="content container">
         <div class="row">
