--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,9 +4,11 @@
     {% for post in posts %}
     <div class="post">
         <div class="date">
-           <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1> 게시일 : {{ post.published_date }}
+           <h3><a class="btn-link text-black btn-no-underline" href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
         </div>
-        
+        <div class="date">
+           · 게시일 : {{ post.published_date }}
+        </div>
         {% comment %} <p>{{ post.text|linebreaksbr }}</p> {% endcomment %}
     </div>
     {% endfor %}
