2023052402 임시 게시글 등록 및 게시글 삭제 로직 구현

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -69,3 +69,17 @@ h4 {
 .btn-link:hover {
     opacity: 0.5 !important;
 }
+
+
+
+tr.boarder {
+    cursor: pointer;
+}
+
+.visited-link {
+    background-color: yellow;
+}
+
+.translucent {
+    opacity: 0.5;
+}
