--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,12 +10,15 @@
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}?v=2023052401" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'js/post_draft_list.js' %}?v=2023052401"></script>
 </head>
 <body>
     <div class="page-header">
     {% if user.is_authenticated %}
         <a href="{% url 'post_create' %}" class="top-menu"><span class="glyphicon glyphicon-plus btn btn-link"></span></a>
+        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit btn btn-link"></span></a>
     {% endif %}
         <h1><a href="/">두리의 블로그</a></h1>
     </div>
