20230524 아직 덜만들긴 했음

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -80,6 +80,6 @@ tr.boarder {
     background-color: yellow;
 }
 
-.translucent {
-    opacity: 0.5;
+.comment {
+    margin: 20px 0px 20px 20px;
 }
