--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,15 +10,48 @@
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}?v=2023052401" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}?v=2023052402" type="text/css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="{% static 'js/post_draft_list.js' %}?v=2023052401"></script>
+    <script src="{% static 'js/post_draft_list.js' %}"></script>
+
+    <script type="text/javascript">
+        function getFetchVersion(file) {
+            return new Promise((resolve, reject) => {
+                fetch(file)
+                .then(r => {
+                    let lastModGmt = new Date(r.headers.get('Last-Modified'));
+                    let lastModUtc = new Date(lastModGmt.getTime() + (lastModGmt.getTimezoneOffset() * 60000));
+                    resolve(fetchCallback(file + '?' + lastModUtc.toLocaleString()));
+                })
+                .catch(er => {
+                    reject(er.message);
+                });
+            });
+        }
+
+        function fetchCallback(path) {
+            let link = document.createElement("link");
+            link.type = "text/css";
+            link.rel = "stylesheet";
+            link.href = path;
+            document.getElementsByTagName("head")[0].appendChild(link);
+        }
+
+        getFetchVersion('/static/css/blog.css')
+        .catch(error => {
+            console.error(error);
+        });
+    </script>
+
 </head>
 <body>
     <div class="page-header">
     {% if user.is_authenticated %}
         <a href="{% url 'post_create' %}" class="top-menu"><span class="glyphicon glyphicon-plus btn btn-link"></span></a>
         <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit btn btn-link"></span></a>
+        <p class="top-menu">안녕하세요. {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+    {% else %}
+        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
     {% endif %}
         <h1><a href="/">두리의 블로그</a></h1>
     </div>
