--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -9,6 +9,7 @@
     border-bottom: 1px solid #e8e8e8;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
+    background-color: #2e4361;
 }
 
 
@@ -16,12 +17,18 @@
 .page-header h1 a,
 .page-header h1 a:visited,
 .page-header h1 a:active {
+    color: white;
     font-size: 36pt;
     text-decoration: none;
 }
 
-.content {
-    margin-left: 40px;
+.lg-btn-fs875 {
+    font-size: 0.875rem !important;
+}
+
+.container {
+    margin: 0 auto;
+    text-align: center;
 }
 
 h1,
@@ -48,7 +55,7 @@ h4 {
 .top-menu:hover,
 .top-menu:visited {
     float: right;
-    font-size: 26pt;
+    font-size: 1.5rem;
     margin-right: 20px;
 }
 
