--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,12 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyDjango Blog Project!</title>
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}?v=2023052402" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}" type="text/css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/post_draft_list.js' %}"></script>
-
+    
     <script type="text/javascript">
         function getFetchVersion(file) {
             return new Promise((resolve, reject) => {
@@ -46,14 +46,34 @@
 </head>
 <body>
     <div class="page-header">
-    {% if user.is_authenticated %}
-        <a href="{% url 'post_create' %}" class="top-menu"><span class="glyphicon glyphicon-plus btn btn-link"></span></a>
-        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit btn btn-link"></span></a>
-        <p class="top-menu">안녕하세요. {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-    {% else %}
-        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-    {% endif %}
-        <h1><a href="/">두리의 블로그</a></h1>
+        <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">두리의 놀이터</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Link</a>
+                </li>
+            </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_create' %}" class="top-menu"><span class="glyphicon glyphicon-plus btn btn-link"></span></a>
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit btn btn-link"></span></a>
+                <p class="top-menu">안녕하세요. {{ user.username }} <small>(<a href="{% url 'logout' %}">로그 아웃</a>)</small></p>
+            {% else %}
+                <button type="button" href="{% url 'login' %}" class="btn btn-light top-menu lg-btn-fs875">로그인</button>
+            {% endif %}
+            </div>
+        </div>
+        </nav>
     </div>
     <div class="content container">
         <div class="row">
@@ -63,8 +83,7 @@
             </div>
         </div>
     </div>
-
-
+    
 </body>
 
 </html>
