--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -67,9 +67,9 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'post_create' %}" class="top-menu"><span class="glyphicon glyphicon-plus btn btn-link"></span></a>
                 <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit btn btn-link"></span></a>
-                <p class="top-menu">안녕하세요. {{ user.username }} <small>(<a href="{% url 'logout' %}">로그 아웃</a>)</small></p>
+                <p class="top-menu intro-lg">안녕하세요. {{ user.username }} (<a class="lg-out-btn" href="{% url 'logout' %}">로그 아웃</a>)</p>
             {% else %}
-                <button type="button" href="{% url 'login' %}" class="btn btn-light top-menu lg-btn-fs875">로그인</button>
+                <button type="button" onclick="window.location.href='{% url 'login' %}'" class="btn btn-light top-menu lg-btn-fs875">로그인</button>
             {% endif %}
             </div>
         </div>
@@ -77,13 +77,13 @@
     </div>
     <div class="content container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="">
                 {% block content %}
                 {% endblock %}
             </div>
         </div>
     </div>
-    
+
 </body>
 
 </html>
