--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,7 +10,8 @@
     <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    {% comment %} <link rel="stylesheet" href="{% static 'css/blog.css' %}" type="text/css"> {% endcomment %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/post_draft_list.js' %}"></script>
     
@@ -48,7 +49,7 @@
     <div class="page-header">
         <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">두리의 놀이터</a>
+            <a class="navbar-brand text-white" href="/">두리의 놀이터</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -65,8 +66,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             {% if user.is_authenticated %}
-                <a href="{% url 'post_create' %}" class="top-menu"><span class="glyphicon glyphicon-plus btn btn-link"></span></a>
-                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit btn btn-link"></span></a>
+                <div class="nav-top-btn">
+                    <a href="{% url 'post_create' %}" class="top-menu"><i class="bi bi-pencil-square top-fn-btn-style"></i></a>
+                    <a href="{% url 'post_draft_list' %}" class="top-menu"><i class="bi bi-card-checklist top-fn-btn-style"></i></a>
+                </div>
                 <p class="top-menu intro-lg">안녕하세요. {{ user.username }} (<a class="lg-out-btn" href="{% url 'logout' %}">로그 아웃</a>)</p>
             {% else %}
                 <button type="button" onclick="window.location.href='{% url 'login' %}'" class="btn btn-light top-menu lg-btn-fs875">로그인</button>
@@ -75,9 +78,9 @@
         </div>
         </nav>
     </div>
-    <div class="content container">
-        <div class="row">
-            <div class="">
+    <div class="main">
+        <div class="content">
+            <div class="section">
                 {% block content %}
                 {% endblock %}
             </div>
