--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,17 +11,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    {% comment %} <link rel="stylesheet" href="{% static 'css/blog.css' %}" type="text/css"> {% endcomment %}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/post_draft_list.js' %}"></script>
-    
     <script type="text/javascript">
         function getFetchVersion(file) {
             return new Promise((resolve, reject) => {
                 fetch(file)
                 .then(r => {
                     let lastModGmt = new Date(r.headers.get('Last-Modified'));
-                    let lastModUtc = new Date(lastModGmt.getTime() + (lastModGmt.getTimezoneOffset() * 60000));
+                    let lastModUtc = new Date(lastModGmt.getTime() + (lastModGmt.getTimezoneOffset() * 60000) + (9 * 60 * 60000));
                     resolve(fetchCallback(file + '?' + lastModUtc.toLocaleString()));
                 })
                 .catch(er => {
