상세보기 모바일 반응형으로 변경

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <div class="container mt-5">
-    <div class="card border-start-0 border-end-0 mxc">
-        <div class="card-header border-top-3 title">
+    <div class="card border-0">
+        <div class="card-header border-0 title">
             <h5>{{ post.title }}</h5>
         </div>
         <div class="card-header bg-white">
@@ -61,13 +61,6 @@
             </div>
 
         </div>
-
-
-
-
-
-
-
     </div>
 </div>
 
