게시자 수정

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,7 +9,7 @@
         </div>
         <div class="card-header bg-white">
             <div class="writer float-start mt-2">
-                게시자 : {{ user.last_name }}{{ user.first_name }}
+                게시자 :{{ post.author.last_name }}{{ post.author.first_name }}
             </div>
             <div class="date top-menu">
                 {% if post.published_date %}
