--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -143,3 +143,21 @@ tr.boarder {
 .bd-contents {
     text-align: initial !important;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.content {
+    flex: 1;
+}
+
+.footer {
+    flex-shrink: 0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
