--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,16 +1,19 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<ol class="list-group">
     {% for post in posts %}
-    <div class="post">
-        <div class="date">
-           <h3><a class="btn-link text-black btn-no-underline" href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h3>
-        </div>
-        <div class="date">
-           · 게시일 : {{ post.published_date }}
-        </div>
-        {% comment %} <p>{{ post.text|linebreaksbr }}</p> {% endcomment %}
-        <a class="comment-lst" href="{% url 'post_detail' pk=post.pk %}">댓글 : {{ post.approved_comments.count }}</a>
-    </div>
+        <li class="list-group-item">
+            <div class="row">
+                <div class="col-md-8">
+                    <a class="btn-link text-black btn-no-underline" href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a>
+                    <a class="comment-lst ml-2" href="{% url 'post_detail' pk=post.pk %}">댓글: {{ post.comments.count }}</a>
+                </div>
+                <div class="col-md-4 text-right">
+                    <div class="post-date small text-muted" style="opacity: 0.8">게시일: {{ post.published_date }}</div>
+                </div>
+            </div>
+        </li>
     {% endfor %}
+</ol>
 {% endblock %}
