--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <ol class="list-group">
-    {% for post in posts %}
+    {% for post in page_obj %}
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-8">
@@ -16,4 +16,30 @@
         </li>
     {% endfor %}
 </ol>
+<div class="pagination justify-content-center">
+    <ul class="pagination">
+        {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page=1">&laquo; 처음</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">이전</a>
+            </li>
+        {% endif %}
+
+        <li class="page-item active">
+            <span class="page-link">{{ page_obj.number }}</span>
+        </li>
+
+        {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">다음</a>
+            </li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">끝 &raquo;</a>
+            </li>
+        {% endif %}
+    </ul>
+</div>
+
 {% endblock %}
