--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -35,9 +35,17 @@
             </li>
         {% endif %}
 
-        <li class="page-item active">
-            <span class="page-link">{{ page_obj.number }}</span>
-        </li>
+        {% for num in page_obj.paginator.page_range %}
+            {% if num == page_obj.number %}
+                <li class="page-item active">
+                    <span class="page-link">{{ num }}</span>
+                </li>
+            {% elif num > page_obj.number|add:"-5" and num < page_obj.number|add:"5" %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                </li>
+            {% endif %}
+        {% endfor %}
 
         {% if page_obj.has_next %}
             <li class="page-item">
