--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,60 +1,55 @@
 {% extends 'blog/base.html' %}
 
+{% block notice %}
+    {% with notice_flag=True %}
+        <ol class="list-group">
+            {% for post in notice_page_obj %}
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <a class="btn-link text-black btn-no-underline" href="{% url 'post_detail' pk=post.pk %}">
+                                {% if post.title|length > 45 %}
+                                    {{ post.title|slice:":45" }}...
+                                {% else %}
+                                    {{ post.title }}
+                                {% endif %}
+                            </a>
+                            <a class="comment-lst ml-2" href="{% url 'post_detail' pk=post.pk %}">댓글: {{ post.comments.count }}</a>
+                        </div>
+                        <div class="col-md-4 text-right">
+                            <div class="post-date small text-muted" style="opacity: 0.8">게시일: {{ post.published_date|date:"Y년 m월 d일 H:i A"|add:"-9 hours" }} | 조회수: {{ post.views }}</div>
+                        </div>
+                    </div>
+                </li>
+            {% endfor %}
+        </ol>
+        {% include 'blog/pagination.html' with page_obj=notice_page_obj is_notice=notice_flag %}
+    {% endwith %}
+{% endblock %}
+
 {% block content %}
-<ol class="list-group">
-    {% for post in page_obj %}
-        <li class="list-group-item">
-            <div class="row">
-                <div class="col-md-8">
-                    <a class="btn-link text-black btn-no-underline" href="{% url 'post_detail' pk=post.pk %}">
-                        {% if post.title|length > 45 %}
-                            {{ post.title|slice:":45" }}...
-                        {% else %}
-                            {{ post.title }}
-                        {% endif %}
-                    </a>
-                    <a class="comment-lst ml-2" href="{% url 'post_detail' pk=post.pk %}">댓글: {{ post.comments.count }}</a>
-                </div>
-                <div class="col-md-4 text-right">
-                    <div class="post-date small text-muted" style="opacity: 0.8">게시일: {{ post.published_date|date:"Y년 m월 d일 H:i A"|add:"-9 hours" }}  |   조회수: {{ post.views }}</div>
-                </div>
-            </div>
-        </li>
-    {% endfor %}
-</ol>
-
-<div class="pagination justify-content-center mt-3 mb-1">
-    <ul class="pagination">
-        {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a class="page-link" href="?page=1">&laquo; 처음</a>
-            </li>
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">이전</a>
-            </li>
-        {% endif %}
-
-        {% for num in page_obj.paginator.page_range %}
-            {% if num == page_obj.number %}
-                <li class="page-item active">
-                    <span class="page-link">{{ num }}</span>
+    {% with notice_flag=False %}
+        <ol class="list-group">
+            {% for post in content_page_obj %}
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <a class="btn-link text-black btn-no-underline" href="{% url 'post_detail' pk=post.pk %}">
+                                {% if post.title|length > 45 %}
+                                    {{ post.title|slice:":45" }}...
+                                {% else %}
+                                    {{ post.title }}
+                                {% endif %}
+                            </a>
+                            <a class="comment-lst ml-2" href="{% url 'post_detail' pk=post.pk %}">댓글: {{ post.comments.count }}</a>
+                        </div>
+                        <div class="col-md-4 text-right">
+                            <div class="post-date small text-muted" style="opacity: 0.8">게시일: {{ post.published_date|date:"Y년 m월 d일 H:i A"|add:"-9 hours" }} | 조회수: {{ post.views }}</div>
+                        </div>
+                    </div>
                 </li>
-            {% elif num > page_obj.number|add:"-5" and num < page_obj.number|add:"5" %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                </li>
-            {% endif %}
-        {% endfor %}
-
-        {% if page_obj.has_next %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}">다음</a>
-            </li>
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">끝 &raquo;</a>
-            </li>
-        {% endif %}
-    </ul>
-</div>
-
+            {% endfor %}
+        </ol>
+        {% include 'blog/pagination.html' with page_obj=content_page_obj is_notice=notice_flag %}
+    {% endwith %}
 {% endblock %}
