혹시나 하는 테스트

--- a/blog/templates/accounts/login.html
+++ b/blog/templates/accounts/login.html
@@ -21,4 +21,5 @@
         <input type="submit" value="login" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
+    <p>아직 계정이 없으신가요? <a href="{% url 'account_signup' %}">회원가입</a></p>
 {% endblock %} 
